fixed overflow issue

--- a/styles/style.css
+++ b/styles/style.css
@@ -115,6 +115,7 @@ div {
 
 .sticky p {
     font-size: 0.6rem;
+    overflow: scroll;
 }
 
 .sticky h3 {
